Polishing.
Revise PersistenceProvider detection to a EntityManagerFactory-based variant, considering EntityManagerFactory proxying.

See: #3425
Original pull request: #3885